# ProjectSoftwareEngineering

./: .gitignore  CMakeLists.txt  Metronet.cpp  Metronet.h  OurExceptions.cpp  OurExceptions.h  README.md  Signaal.cpp  Signaal.h  Spoor.cpp  Spoor.h  Station.cpp  Station.h  Tram.cpp  Tram.h  Utilities.cpp  Utilities.h  foutetest1.xml  library.cpp  library.h  main.cpp  main_gui.cpp  main_test.cpp  systeem.cpp  systeem.h  test.xml  testASCIIcomp11.txt  testASCIIcomp12.txt  testASCIIcomp21.txt  testASCIIcomp22.txt  testcomp.txt  wrongInput1.xml
SFML/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
SFML/lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
tests/: CorrectInput.xml  CorrectInput2.xml  testASCIIresult11.txt  testASCIIresult12.txt  testASCIIresult21.txt  testcomp.txt  wrongInput1.xml  wrongInput2.xml  wrongInput3.xml  wrongInput4.xml  wrongInput5.xml  wrongInput6.xml  wrongInput7.xml  wrongInput8.xml
